--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,40 @@
-fastapi>=0.96.0
-uvicorn>=0.22.0
-sqlalchemy>=2.0.15
-alembic>=1.11.1
-pydantic>=2.0.0
-psycopg2-binary>=2.9.6
-python-jose>=3.3.0
-passlib>=1.7.4
-python-multipart>=0.0.6
-bcrypt>=4.0.1
+# Web Framework
+fastapi>=0.103.1
+uvicorn>=0.23.2
+pydantic>=2.3.0
+pydantic-settings>=2.0.3
 email-validator>=2.0.0
-elasticsearch>=8.8.0
-pytest>=7.3.1
-httpx>=0.24.1
-rasa>=3.6.0
-jinja2>=3.1.2
+
+# Database
+sqlalchemy>=2.0.20
+psycopg2-binary>=2.9.7
+alembic>=1.12.0
+
+# Autenticazione e Sicurezza
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.6
+
+# Elasticsearch
+elasticsearch>=8.9.0
+
+# Chatbot e NLP
+nltk>=3.8.1
+scikit-learn>=1.3.0
+sentence-transformers>=2.2.2
+
+# Utility
 python-dotenv>=1.0.0
+requests>=2.31.0
+Jinja2>=3.1.2
+aiofiles>=23.2.1
+PyYAML>=6.0.1
+pandas>=2.1.0
+
+# Testing
+pytest>=7.4.2
+pytest-cov>=4.1.0
+httpx>=0.24.1
+
+# Logging
+import logging
