--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,12 @@ DEBUG=True
 DATABASE_URL=postgresql://postgres:postgres@db:5432/compliance_compass
 
 # JWT
-JWT_SECRET_KEY=replace_with_secure_secret_key_in_production
+JWT_SECRET_KEY=compliance_compass_secret_key_development
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
 # CORS
-CORS_ORIGINS=http://localhost,http://localhost:3000,http://localhost:8000
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000
 
 # Elasticsearch
 ELASTICSEARCH_URL=http://elasticsearch:9200
@@ -32,7 +32,3 @@ RECAPTCHA_SECRET_KEY=your_recaptcha_secret_key
 
 # AI API per Chatbot
 AI_API_KEY=your_openai_api_key
-
-# Configurazione produzione
-# DB_PASSWORD=secure_database_password
-# AI_API_KEY=your_openai_api_key
