--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ alembic==1.12.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
+PyJWT==2.7.0
 
 # Elasticsearch
 elasticsearch==8.9.0
