--- a/pytest.ini
+++ b/pytest.ini
@@ -20,6 +20,7 @@ markers =
     integration: Contrassegna test di integrazione
     performance: Test di performance
     security: Test di sicurezza
+    smoke: Test di base per verificare funzionalità critiche
 
 # Impostazioni per il logging durante i test
 log_cli = true
