--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,11 @@ ACCESS_TOKEN_EXPIRE_MINUTES=60
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
 # CORS
-CORS_ORIGINS=http://localhost:3000,http://localhost:8000
-
+CORS_ORIGINS='["http://localhost:3000","http://localhost:8000"]'
 # Elasticsearch
 ELASTICSEARCH_URL=http://elasticsearch:9200
+# Rimuovere o impostare a false
+USE_MOCK_ELASTICSEARCH=false
 
 # Email
 SMTP_SERVER=smtp.example.com
@@ -32,3 +33,5 @@ RECAPTCHA_SECRET_KEY=your_recaptcha_secret_key
 
 # AI API per Chatbot
 AI_API_KEY=your_openai_api_key
+# Rimuovere o impostare a false
+USE_SIMPLE_CHATBOT=false
