--- a/Dockerfile.api.simplified
+++ b/Dockerfile.api.simplified
@@ -6,8 +6,8 @@ RUN apt-get update && \
     apt-get install -y libpq5 curl && \
     rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements-light.txt .
+RUN pip install --no-cache-dir -r requirements-light.txt
 
 COPY src/ /app/src/
 COPY alembic/ /app/alembic/
