--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 PyJWT==2.7.0
+fastapi-csrf-protect==0.3.3
+itsdangerous==2.1.2
 
 # Elasticsearch
 elasticsearch==8.9.0
@@ -31,6 +33,7 @@ Jinja2==3.1.2
 aiofiles==23.2.1
 PyYAML==6.0.1
 pandas==2.1.0
+psutil>=5.9.0,<6.0.0
 
 # Testing
 pytest==7.4.2
