da rimuovere elasticSearch e chatbot

--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # Copia e installa le dipendenze Python
-COPY requirements.txt .
+COPY requirements.txt . 
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.txt
 
 # Stage 2: Runtime
@@ -29,6 +29,7 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq5 \
     curl \
+    netcat-openbsd \
     && rm -rf /var/lib/apt/lists/*
 
 # Copia le wheel dal builder
