--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
       dockerfile: docker/Dockerfile.api
     restart: unless-stopped
     volumes:
-      - ./:/app
+      - ./src:/app/src
+      - ./alembic:/app/alembic
+      - ./scripts:/app/scripts
     environment:
       - ENVIRONMENT=development
       - DATABASE_URL=postgresql://postgres:password@db:5432/compliance_compass
@@ -37,14 +39,14 @@ services:
       - compliance-network
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.7
     restart: unless-stopped
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     volumes:
-      - elasticsearch_data:/usr/share/elasticsearch/data
+      - elasticsearch-data-new:/usr/share/elasticsearch/data
     ports:
       - "9200:9200"
     networks:
@@ -75,3 +77,4 @@ networks:
 volumes:
   postgres_data:
   elasticsearch_data:
+  elasticsearch-data-new:
