rimozione elastic search e chatbot

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# .env.example - Aggiornato con rimozione configurazioni Elasticsearch e Chatbot
+
 # Configurazione ambiente
 ENVIRONMENT=development
 DEBUG=True
@@ -12,10 +14,6 @@ REFRESH_TOKEN_EXPIRE_DAYS=30
 
 # CORS
 CORS_ORIGINS='["http://localhost:3000","http://localhost:8000"]'
-# Elasticsearch
-ELASTICSEARCH_URL=http://elasticsearch:9200
-# Rimuovere o impostare a false
-USE_MOCK_ELASTICSEARCH=false
 
 # Email
 SMTP_SERVER=smtp.example.com
@@ -31,7 +29,6 @@ FRONTEND_URL=http://localhost:3000
 RECAPTCHA_SITE_KEY=your_recaptcha_site_key
 RECAPTCHA_SECRET_KEY=your_recaptcha_secret_key
 
-# AI API per Chatbot
-AI_API_KEY=your_openai_api_key
-# Rimuovere o impostare a false
-USE_SIMPLE_CHATBOT=false
+# Configurazioni di compatibilità
+USE_MOCK_ELASTICSEARCH=true
+USE_SIMPLE_CHATBOT=true
