--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+# docker-compose.yml - Rimozione del servizio Elasticsearch
+
 version: '3.8'
 
 services:
@@ -15,12 +17,12 @@ services:
       - DATABASE_URL=postgresql://postgres:password@db:5432/compliance_compass
       - SECRET_KEY=your_secret_key
       - DEBUG=true
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - USE_MOCK_ELASTICSEARCH=true
+      - USE_SIMPLE_CHATBOT=true
     ports:
       - "8000:8000"
     depends_on:
       - db
-      - elasticsearch
     networks:
       - compliance-network
 
@@ -37,25 +39,6 @@ services:
       - "5432:5432"
     networks:
       - compliance-network
-
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.7
-    restart: unless-stopped
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-    volumes:
-      - elasticsearch-data-new:/usr/share/elasticsearch/data
-    ports:
-      - "9200:9200"
-    networks:
-      - compliance-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9200"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
 
   frontend:
     image: nginx:alpine
@@ -76,5 +59,3 @@ networks:
 
 volumes:
   postgres_data:
-  elasticsearch_data:
-  elasticsearch-data-new:
