--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# requirements.txt - Aggiornato con rimozione delle dipendenze non necessarie
+
 # Web Framework
 fastapi==0.103.1
 uvicorn==0.23.2
@@ -17,14 +19,6 @@ python-multipart==0.0.6
 PyJWT==2.7.0
 fastapi-csrf-protect==0.3.3
 itsdangerous==2.1.2
-
-# Elasticsearch
-elasticsearch==7.17.7
-
-# Chatbot e NLP
-nltk==3.8.1
-scikit-learn==1.3.0
-sentence-transformers==2.2.2
 
 # Utility
 python-dotenv==1.0.0
