--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -1,102 +1,69 @@
-# Stage 1: Builder
+# Stage 1: Build
 FROM python:3.11-slim AS builder
 
+# Set working directory
 WORKDIR /app
 
-# Installa le dipendenze di sistema per la compilazione
+# Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     libpq-dev \
+    curl \
+    netcat-openbsd \
     && rm -rf /var/lib/apt/lists/*
 
-# Copia e installa le dipendenze Python
+# Copy requirements and install wheels
 COPY requirements.txt . 
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /app/wheels -r requirements.txt
 
 # Stage 2: Runtime
 FROM python:3.11-slim
 
+# Set working directory
 WORKDIR /app
 
-# Crea un utente non-root
-RUN useradd --create-home appuser && chown -R appuser:appuser /app
-# Imposta variabili d'ambiente
+# Create non-root user
+RUN useradd --create-home appuser && \
+    chown -R appuser:appuser /app
+
+# Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     ENVIRONMENT=development
 
-# Installa le dipendenze di sistema per il runtime
+# Install runtime dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq5 \
     curl \
     netcat-openbsd \
     && rm -rf /var/lib/apt/lists/*
 
-# Copia le wheel dal builder
+# Copy pre-built wheels from builder stage
 COPY --from=builder /app/wheels /wheels
 RUN pip install --no-cache /wheels/*
 
-# Copia il codice dell'applicazione
+# Create directories
+RUN mkdir -p /app/data /app/logs && \
+    chown -R appuser:appuser /app/data /app/logs
+
+# Copy project files
 COPY --chown=appuser:appuser alembic/ /app/alembic/
 COPY --chown=appuser:appuser scripts/ /app/scripts/
 COPY --chown=appuser:appuser src/ /app/src/
 COPY --chown=appuser:appuser requirements.txt /app/
 
-# Crea il file alembic.ini
-RUN echo "[alembic]\n\
-script_location = alembic\n\
-prepend_sys_path = .\n\
-\n\
-# Database connection\n\
-sqlalchemy.url = postgresql://postgres:postgres@db:5432/compliance_compass\n\
-\n\
-# Logging\n\
-[loggers]\n\
-keys = root,sqlalchemy,alembic\n\
-\n\
-[handlers]\n\
-keys = console\n\
-\n\
-[formatters]\n\
-keys = generic\n\
-\n\
-[logger_root]\n\
-level = WARN\n\
-handlers = console\n\
-qualname =\n\
-\n\
-[logger_sqlalchemy]\n\
-level = WARN\n\
-handlers =\n\
-qualname = sqlalchemy.engine\n\
-\n\
-[logger_alembic]\n\
-level = INFO\n\
-handlers =\n\
-qualname = alembic\n\
-\n\
-[handler_console]\n\
-class = StreamHandler\n\
-args = (sys.stderr,)\n\
-level = NOTSET\n\
-formatter = generic\n\
-\n\
-[formatter_generic]\n\
-format = %%(levelname)-5.5s [%%(name)s] %%(message)s\n\
-datefmt = %%H:%%M:%%S" > /app/alembic.ini && chown appuser:appuser /app/alembic.ini
-
-# Cartella per i dati persistenti
-RUN mkdir -p /app/data && chown -R appuser:appuser /app/data
-
-# Copia lo script di entrypoint
-COPY ./docker/entrypoint.sh /app/entrypoint.sh
+# Copy entrypoint script
+COPY --chown=appuser:appuser docker/entrypoint.sh /app/entrypoint.sh
 RUN chmod +x /app/entrypoint.sh
 
-# Cambia all'utente non-root
+# Switch to non-root user
 USER appuser
 
-# Esponi la porta
+# Expose port
 EXPOSE 8000
 
+# Set entrypoint
 ENTRYPOINT ["/app/entrypoint.sh"]
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+# Default command
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
