--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
         "formik": "^2.4.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.55.0",
         "react-icons": "^4.12.0",
         "react-markdown": "^9.0.1",
         "react-query": "^3.39.3",
