--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
     "name": "compliance-compass-frontend",
     "version": "0.1.0",
     "private": true,
+    "proxy": "http://localhost:8000",
     "dependencies": {
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
@@ -18,6 +19,7 @@
         "react-router-dom": "^6.20.1",
         "react-scripts": "^5.0.1",
         "react-syntax-highlighter": "^15.5.0",
+        "react-toastify": "^11.0.5",
         "sass": "^1.69.5",
         "web-vitals": "^2.1.4",
         "yup": "^1.3.2"
@@ -45,6 +47,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "proxy": "http://localhost:8000"
+    }
 }
